manifests/system/03-monitoring/04-grafana/05-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.56.0/21,192.168.65.0/24"
spec:
  rules:
  - host: grafana.codekernel.co.uk
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - grafana.codekernel.co.uk
